--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ scikit-learn
 soundfile
 audiomentations>=0.33.0
 resampy # ADD THIS LINE
+git+https://github.com/harritaylor/pytorch-vggish.git#egg=torchvggish # ADD THIS LINE
